Layout Front End UI

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Yield Balancer Bot Tutorial",
+  "name": "yeild_balancer_bot_tutorial",
   "version": "0.1.0",
   "description": "Tutorial Code for DappUniversity.com/Masterclass",
   "author": "admin@alphadataomega.com",
